# dj-shwary

./: .gitignore  CHANGELOG.md  CHANGE_LOG.md  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  tests.yml
src/: db.sqlite3
src/config/: settings.py
src/dj_shwary/: __init__.py  admin.py  apps.py  models.py  services.py  signals.py  urls.py  utils.py  views.py
src/dj_shwary/management/commands/: check_pending_pay.py
src/dj_shwary/migrations/: 0001_initial.py  0002_alter_shwarytransaction_raw_response_and_more.py
src/dj_shwary/templates/shwary/: pay_button.html
src/dj_shwary/templatetags/: shwary_tags.py
tests/: settings.py  test_model.py  test_service.py  test_signals.py  test_webhook.py  urls.py
