[project]
name = "dj-shwary"
version = "0.1.6"
description = "Intégration Django officielle pour le SDK de paiement Shwary."
readme = "README.md"
authors = [
    { name = "Josué Luis Panzu", email = "josuepanzu8@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["shwary", "django", "payments", "africa", "fintech"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "django>=4.2",
    "shwary-python>=2.0.4",
]

[project.urls]
Homepage = "https://github.com/josue46/dj-shwary"
Documentation = "https://github.com/josue46/dj-shwary#readme"
Repository = "https://github.com/josue46/dj-shwary.git"
Issues = "https://github.com/josue46/dj-shwary/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dj_shwary"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "pytest-django>=4.7.0",
    "pytest>=8.0.0",
    "respx>=0.21.0",
]
